--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>javalin</artifactId>
             <version>4.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.4</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>io.github.palexdev</groupId>-->
 <!--            <artifactId>materialfx</artifactId>-->
